# recovery-bench

./: .gitattributes  .gitignore  .gitmodules  README.md  REFACTOR_PLAN.md  improvements.txt  list_printer.py  pyproject.toml  registry.json  run_direct_recovery.py  run_in_screen.sh  run_replay_on_savepoints.py  run_replay_resumable.sh  simple_analyze.py
configs/claude-code/: opus-46-high.json
configs/codex/: gpt-53-codex-xhigh.json
configs/hermes/: gpt-53-codex-xhigh.json
configs/letta-code/: gemini-31-pro-high.json  gpt-53-codex-xhigh.json  minimax-m25.json  opus-46-high.json  opus-46-max.json  sonnet-46-max.json
configs/models/: gemini-3.1-pro-high.json  gemini-31-pro-high.json  glm-5.json  gpt-5.2-codex-high.json  gpt-5.2-codex-medium.json  gpt-5.2-codex-xhigh.json  gpt-5.2-xhigh.json  gpt-52-codex-xhigh.json  gpt-53-codex-xhigh.json  haiku.json  o3-high.json  o3-medium.json  o3-mini-high.json  o3-mini-low.json  (+9 more)
recovery-bench/: __init__.py  generate_traces.py  replay_agent.py  run_replay_agent.py  utils.py
recovery-bench-swe/: README.md
recovery_bench/: __init__.py  generate_traces.py  install-letta-code.sh.j2  letta_code_agent.py  pipeline.py  prompts.py  recovery_letta_code.py  recovery_terminus.py  replay.py  replay_agent.py  replay_letta_code.py  replay_terminus.py  run_recovery.py  run_replay.py  run_replay_agent.py  utils.py
self-correction/: README_hash.md  __init__.py  agent.py  analysis.py  collect_traces.py  compare_results.py  generate_traces.py  hash_reorganize.py  register_unsolved_tasks.py  replay_agent.py  run_replay_agent.py  utils.py
(+20428 files in other folders)
