[project]
name = "recovery-bench"
version = "2.0.0"
description = "Benchmark for evaluating LLM agents' ability to recover from mistakes"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Letta", email = "contact@letta.com"}
]
keywords = ["benchmark", "llm", "agents", "recovery", "terminal-bench"]

dependencies = [
    "harbor",
    "litellm>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["recovery_bench"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
